Fix spacing

--- a/style.css
+++ b/style.css
@@ -103,10 +103,10 @@ body {
 .card {
 	--content-padding: 1rem 0;
 	--content-border-radius: 0.5rem;
-	--content-spacing: 1rem;
+	--content-spacing: 0.5rem;
 
 	background-color: var(--neutral-blue-700);
-	padding: 1.5rem;
+	padding: 1rem;
 	border-radius: var(--content-border-radius);
 	max-width: 22rem;
 }
@@ -204,169 +204,3 @@ hr {
 .card__author-name:hover {
 	color: var(--primary-cyan-400);
 }
-/* :root {
-	--hover-color: hsl(178, 100%, 50%);
-}
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: inherit;
-}
-
-html {
-	font-size: 62.5%;
-}
-
-body {
-	font-size: 1.8rem;
-	box-sizing: border-box;
-	display: grid;
-	place-items: center;
-	background-color: hsl(217, 54%, 11%);
-	height: 100vh;
-	color: hsl(215, 51%, 70%);
-	position: relative;
-}
-
-main {
-	background-color: hsl(216, 50%, 16%);
-	font-family: "Outfit", sans-serif;
-	width: 25%;
-	/* height: 70%; */
-/*	min-height: 70%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-evenly;
-	border-radius: 1rem;
-	padding: 2rem;
-}
-
-.hero-wrapper {
-	width: 100%;
-	max-height: 45%;
-	border-radius: 1rem;
-	margin-top: -2.5rem;
-	margin-bottom: 3rem;
-	cursor: pointer;
-}
-
-.hero-image {
-	position: relative;
-}
-
-.hero-image img {
-	width: 100%;
-	border-radius: 1rem;
-}
-
-.hero-overlay {
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	position: absolute;
-	border-radius: 1rem;
-	background: hsla(178, 100%, 50%, 0.3);
-	display: grid;
-	place-items: center;
-	opacity: 0;
-	transition: all 0.6s;
-}
-
-.hero-overlay .icon-eye {
-	width: 5rem;
-	height: 5rem;
-}
-.hero-overlay:hover {
-	opacity: 1;
-}
-
-.title {
-	color: #fff;
-	font-size: 2rem;
-	font-weight: 400;
-	margin: 2rem 0;
-	cursor: pointer;
-	transition: color 0.6s;
-}
-
-.title:hover {
-	color: var(--hover-color);
-}
-
-.description {
-	margin-bottom: 1.5rem;
-}
-.details {
-	display: flex;
-	margin: 1.5rem 0;
-	justify-content: space-between;
-}
-
-.details div {
-	display: flex;
-	gap: 1rem;
-}
-
-.details-left {
-	color: hsl(178, 100%, 50%);
-}
-
-hr {
-	width: 100%;
-	border: solid 1px hsl(215, 32%, 27%);
-}
-
-.footer {
-	display: flex;
-	align-self: flex-start;
-	align-items: center;
-	gap: 1rem;
-}
-
-.footer img {
-	width: 3rem;
-	border-radius: 50%;
-	border: solid 1px white;
-}
-
-.name {
-	color: #fff;
-	cursor: pointer;
-	transition: color 0.6;
-}
-
-.name:hover {
-	color: var(--hover-color);
-}
-
-footer {
-	position: absolute;
-	bottom: 0;
-}
-
-@media (min-width: 1500px) and (min-height: 600px) {
-	main {
-		height: 95%;
-	}
-}
-
-@media (min-width: 600px) and (max-width: 1000px) {
-	main {
-		width: 50%;
-		height: 80%;
-	}
-}
-
-@media (min-width: 300px) and (max-width: 599px) {
-	main {
-		width: 85%;
-		height: 80%;
-	}
-
-	.hero-wrapper {
-		margin-top: -1rem;
-	}
-} */
